fixed spacing

--- a/styles.css
+++ b/styles.css
@@ -8,40 +8,44 @@ body {
   font-size: 18px;
 }
 
-body, a:link, a:visited, a:active{
+body, a:link, a:visited, a:active {
   color: lightblue;
 }
-.title, .addDancerButton{
+
+.title, .addDancerButton {
   padding:5px 12px;
   float:right;
 }
-.topbar{
+
+.topbar {
   height:32px;
   background-color: #555;
 }
-.title{
+
+.title {
   background-color: #777;
 }
-.dancer{
+
+.dancer {
   border:10px solid red;
   border-radius:10px;
   position:absolute;
 }
-.blinkyDancer {
-  background-image: url(https://gfycat.com/bouncysolidanophelesmosquito);
-}
-.shyDancer{
+
+.shyDancer {
   border:10px solid green;
   border-radius:10px;
   position:absolute;
 }
-.bouncingDancer{
+
+.bouncingDancer {
   border:10px solid blue;
   border-radius:10px;
   position:absolute;
   transition: .2s all ease;
 }
-.bounce{
+
+.bounce {
   border: 20px solid blue;
   border-radius:20px;
 }
